# aiml

./: .gitignore  langchain-chat-with_audio_new.py  langchain-chat.py  website_scraper_new.py
chatbot/: backend.py  frontend.py
codegen/: README.md  pyproject.toml
codegen/src/codegen/: crew.py  main.py
codegen/src/codegen/config/: agents.yaml  tasks.yaml
crewai_chat_rag/: README.md  pyproject.toml  report.md
crewai_chat_rag/src/crewai_chat_rag/: crew.py  main.py
crewai_chat_rag/src/crewai_chat_rag/config/: agents.yaml  tasks.yaml
crewaichat/: README.md  pyproject.toml
crewaichat/src/crewaichat/: crew.py  main.py
crewaichat/src/crewaichat/config/: agents.yaml  tasks.yaml
document_summarization/: README.md  pyproject.toml
document_summarization/src/document_summarization/: crew.py  main.py
document_summarization/src/document_summarization/config/: agents.yaml  tasks.yaml
document_summarization/src/document_summarization/tools/: custom_tool.py
synthetic_data_generator/: README.md  pyproject.toml
synthetic_data_generator/src/synthetic_data_generator/: crew.py  main.py
synthetic_data_generator/src/synthetic_data_generator/config/: agents.yaml  tasks.yaml
synthetic_data_generator/src/synthetic_data_generator/tools/: custom_tool.py
