[project]
name = "codegen"
version = "0.1.0"
description = "codegen using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3",
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
codegen = "codegen.main:run"
run_crew = "codegen.main:run"
train = "codegen.main:train"
replay = "codegen.main:replay"
test = "codegen.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
