[project]
name = "crewai_chat_rag"
version = "0.1.0"
description = "crewai_chat_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3",
    "langchain_aws",
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
crewai_chat_rag = "crewai_chat_rag.main:run"
run_crew = "crewai_chat_rag.main:run"
train = "crewai_chat_rag.main:train"
replay = "crewai_chat_rag.main:replay"
test = "crewai_chat_rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
