[project]
name = "document_summarization"
version = "0.1.0"
description = "document_summarization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3",
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
document_summarization = "document_summarization.main:run"
run_crew = "document_summarization.main:run"
train = "document_summarization.main:train"
replay = "document_summarization.main:replay"
test = "document_summarization.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
